[package]
name = "mub"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
comrak = { version = "0.39.0", default-features = false }
lazy_static = "1.5.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tera = { version = "1.20.0", default-features = false }
