[package]
name = "mub"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
comrak = { version = "0.39.0", default-features = false }
minijinja = { version = "2.10.2", features = ["loader"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
