[package]
name = "mub"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
glob = "0.3.2"
minijinja = { version = "2.10.2", features = ["loader"] }
pulldown-cmark = { version = "0.13.0", features = ["serde", "simd"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
